infrastructures/OCI/k8s/linkerd/linkerd-viz-ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: linkerd-viz-https
  namespace: linkerd-viz
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`linkerd.oci.santocaruso.eu`)
      kind: Rule
      services:
        - name: web
          port: 8084
      middlewares:
        - name: google-auth
          namespace: traefik
        - name: linkerd-viz-headers
          namespace: linkerd-viz
  tls:
    certResolver: letsencrypt
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: linkerd-viz-headers
  namespace: linkerd-viz
spec:
  headers:
    customRequestHeaders:
      Host: web.linkerd-viz.svc
